# psychopy-eyetracker-gazepoint

./: MANIFEST.in  README.md  pyproject.toml
docs_src/: download.rst  index.rst
psychopy_eyetracker_pathfinder/: __init__.py
psychopy_eyetracker_pathfinder/pathfinder/: __init__.py  settings.py
psychopy_eyetracker_pathfinder/pathfinder/api/: calibration.py  default_eyetracker.yaml  eyetracker.py  supported_config_settings.yaml
tests/test_builder/: test_eyetracker_backend.py
